user service version de test